add build methods for both host(x86) and target(arm)

--- a/ili9341_fb_driver/Makefile
+++ b/ili9341_fb_driver/Makefile
@@ -1,16 +1,25 @@
-obj-m += ili9341_drv.o
+# Host specifics
+KERNEL_DIR_HOST := /lib/modules/$(shell uname -r)/build
 
+# Beaglebone specifics
+KERNEL_DIR_BBB := /home/gia/bbb/kernelbuildscripts/KERNEL
+TOOLCHAIN_BBB  := /home/gia/bbb/kernelbuildscripts/dl/gcc-8.5.0-nolibc/arm-linux-gnueabi/bin/arm-linux-gnueabi-
+	
+.PHONY: host, target, all, clean
 
+obj-m := ili9341_drv.o
 
-#--------------- Test build on Host Machine (x86) -------------------#
-all:
+all,host:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
 
+target:
+	make ARCH=arm CROSS_COMPILE=$(TOOLCHAIN_BBB) -C $(KERNEL_DIR_BBB) M=$(PWD) modules
+
 clean:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
-
-#--------------------------------------------------------------------#
-
-
-
-#--------------- Build on Target device (BBB - ARM) -----------------#
+	@if [ "$(ARCH)" = "arm" ]; then \
+		echo "Cleaning for target (ARM)..."; \
+		make -C $(KERNEL_DIR_BBB) M=$(PWD) clean; \
+	else \
+		echo "Cleaning for host (x86)..."; \
+		make -C $(KERNEL_DIR_HOST) M=$(PWD) clean; \
+	fi
