--- a/test_app/Makefile
+++ b/test_app/Makefile
@@ -4,11 +4,11 @@ INC_DIR := ./inc
 SRC_DIR := ./src
 APP_NAME := "test_app"
 
-CC := g++
-FLAGS := -Wall -lpthread
+CXX := g++
+CXXFLAGS := -Wall -lpthread
 
 all:
-	$(CC) main.cpp $(SRC_DIR)/*.cpp -I$(INC_DIR) -o $(APP_NAME)
+	$(CXX) $(CXXFLAGS) main.cpp $(SRC_DIR)/*.cpp -I$(INC_DIR) -o $(APP_NAME)
 
 clean:
 	rm -rf $(APP_NAME)
